# StudiComplete

./: .gitignore  .gitmodules
CG/: next.txt
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/: CMakeLists.txt
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/res/models/: bullet.dae  enemy_body.dae  enemy_head.dae  level.dae  player_body.dae  player_body_hitmodel.dae  player_head.dae  player_head_hitmodel.dae
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/res/shaders/: fsphong.glsl  fsui.glsl  vsphong.glsl  vsskybox.glsl  vsui.glsl
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/src/: DIRECTORIES.h  DebugRender.cpp  DebugRender.h  Game.cpp  Game.h  Tank.cpp  Tank.h  main.cpp
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/src/helper/: Aabb.cpp  Aabb.h  Camera.cpp  Camera.h  Color.cpp  IndexBuffer.cpp  IndexBuffer.h  Lights.h  RGBImage.cpp  RGBImage.h  VertexBuffer.cpp  VertexBuffer.h
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/src/math/: Matrix.h  Vector.cpp  Vector.h
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/src/model/: BaseModel.cpp  BaseModel.h  Bullet.cpp  Bullet.h  HitModel.cpp  HitModel.h  Model.cpp  Model.h  SkyBox.cpp  SkyBox.h  Texture.cpp
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/src/shader/: BaseShader.cpp  BaseShader.h  ConstantShader.h  PhongShader.cpp  PhongShader.h  SkyBoxShader.cpp  SkyBoxShader.h  UIShader.cpp  UIShader.h
CG/Hausarbeit_Computergrafik_Benno_Steinkamp/CLion/src/ui/: BaseUIComponent.cpp  BaseUIComponent.h  Font.cpp  Font.h  UIRect.cpp  UIRect.h  UITextBox.cpp  UITextBox.h
(+1276 files in other folders)
